compiler/fir/analysis-tests/testData/resolve/extendedCheckers/UselessCallOnNotNullChecker/String.kt
// WITH_STDLIB

konst s = ""
konst s1 = s.<!USELESS_CALL_ON_NOT_NULL!>orEmpty()<!>